<resources>
    <string name="app_name">Ona</string>
    <string name="copyright">copyright ona 2020</string>

    <!--
       onboarding1
    -->

    <string name="ob1_title">Shorten and Secured Links </string>
    <string name="ob1_content">Customize your links to make them professional, intuitive and easily interpretable. We\'ll take care of notifying you if a link is safe for you. </string>

    <!--
   onboarding2
     -->

    <string name="ob2_title">Organize and Save yours Links</string>
    <string name="ob2_content">Customize your links to make them professional, intuitive and easily interpretable. We\'ll take care of notifying you if a link is safe for you. </string>

    <!--
       onboarding3
    -->

    <string name="ob3_title">Create Collections and share with the world </string>
    <string name="ob3_content">Customize your links to make them professional, intuitive and easily interpretable. We\'ll take care of notifying you if a link is safe for you.</string>

    <!--
       onboarding4
    -->

    <string name="ob4_title">Sync your devices Clipboards and Work faster </string>
    <string name="ob4_content">Customize your links to make them professional, intuitive and easily interpretable. We\'ll take care of notifying you if a link is safe for you.</string>

    <string name="skip">Skip >></string>
    <string name="go">GO !</string>

    <!--
        main
    -->

    <string name="search_all">Search All</string>
    <string name="search">Search</string>
    <string name="all">All >></string>
    <string name="recent_link">Recent links</string>
    <string name="recent_collection">Recent collections</string>


    <!--
        Collection
    -->

    <string name="visibility">Visibility</string>
    <string name="like">Likes</string>
    <string name="create_at">Created At</string>
    <string name="box_add_new_collection">Collection</string>
    <string name="box_add_new_collection_title">You have more interested collection ?</string>
    <string name="coll_all">All your collections</string>
    <string name="coll_all_check">Check all your collections</string>

    <!--
       Links
    -->

    <string name="go_to_res">Go to resource</string>
    <string name="box_add_new_link">Link</string>
    <string name="box_add_new_link_title">You have more interested link ?</string>
    <string name="link_add_title">Title</string>
    <string name="link_add_desc">Description</string>
    <string name="link_add_short">Url Shorten</string>
    <string name="link_add_customize">Customize</string>
    <string name="link_add_path">Path :</string>
    <string name="link_add_authority">Auth. :</string>
    <string name="link_add_save">Save Link</string>
    <string name="links">Links</string>
    <string name="link_all">All your links</string>
    <string name="link_all_check">Check all your link there</string>


    <!--
        Group
    -->

    <string name="box_add_new_group">Group</string>
    <string name="group_name">Android community</string>


    <!--
        Navigation drawer
    -->

    <string name="browse">Browse public collections</string>
    <string name="popular">Popular</string>
    <string name="language">Languages</string>
    <string name="setting">Settings</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="invite_friend">Invite friends</string>
    <string name="my_group">My groups</string>

    <!--
        Others
    -->

    <string name="yours">Yours</string>
    <string name="downloads">Downloads</string>
    <string name="qr_code">QR Code</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="wi_fi">Wi-Fi</string>
    <string name="make_public">Make public</string>
    <string name="link_paste_placeholder">Paste your link there…</string>
    <string name="secure_http">Secure http connection</string>
    <string name="clicked">Clicked</string>
    <string name="public_value">Public</string>

    <!--
       for ui
    -->

    <string name="android">Android</string>
    <string name="android_collection">Android collection</string>
    <string name="android_doc">Android documentation</string>
    <string name="android_doc_desc">
        Lien de la documentation pour
        les développeurs Android
    </string>
    <string name="username">Bakari Potter</string>
    <string name="email">llastkrakw21@gmail.com</string>
    <string name="links_number">14 Links</string>
    <string name="number">14</string>
    <string name="date">21/10/2001</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="shorten">Shorten</string>
    <string name="customize">Customize</string>
    <string name="secure_connection">Secure connection</string>
    <string name="is_public">Is public</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="please_signin_to_inter_on_our_app">Please SignIn to inter on our app</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create new Account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_signup_and_begin_handle_your_links">Please SignUp to access</string>
    <string name="username_title">Username</string>
    <string name="email_title">Email</string>
    <string name="nothing_found">Nothing Found !</string>
    <string name="add_link">Add Link</string>
    <string name="collections">Collections</string>
    <string name="welcome">Welcome to Ona !</string>
    <string name="begin_to_fork_collections">Begin to fork collections</string>
    <string name="resource_type">Resource type</string>
    <string name="security">Security</string>
    <string name="type">Type</string>
    <string name="secured">Secured</string>
    <string name="web_site_type">Web Site</string>
    <string name="file_type">File</string>
    <string name="not_secured">Not Secured</string>

</resources>