<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".loginAndRegister.RegisterActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:src="@drawable/ic_logo_blanc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/copyright"/>


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        style="@style/OnboardingTitleStyle"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"/>


    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_signup_and_begin_handle_your_links"
        style="@style/OnboardingContentStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginStart="32dp"/>


    <TextView
        android:id="@+id/name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_title"
        android:textSize="14sp"
        style="@style/OnboardingContentStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle"
        android:layout_marginStart="32dp"
        android:labelFor="@id/name_edt"
        android:layout_marginTop="32dp"/>

    <EditText
        android:id="@+id/name_edt"
        style="@style/edit_text"
        android:autofillHints="@string/copyright"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_title"
        />

    <TextView
        android:id="@+id/email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_title"
        android:textSize="14sp"
        style="@style/OnboardingContentStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_edt"
        android:layout_marginStart="32dp"
        android:labelFor="@id/email_edt"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/email_edt"
        style="@style/edit_text"
        android:autofillHints="@string/copyright"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_title"
        />

    <TextView
        android:id="@+id/password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="14sp"
        style="@style/OnboardingContentStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_edt"
        android:layout_marginStart="32dp"
        android:labelFor="@id/password_edt"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/password_edt"
        style="@style/edit_text"
        android:autofillHints="@string/copyright"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_title"
        />


    <Button
        android:id="@+id/sign_up"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/textColorWhite"
        android:background="@drawable/button_shape"
        android:elevation="7dp"
        android:padding="15dp"
        android:focusable="true"
        android:clickable="true"
        android:fontFamily="@font/gilroy_bold"
        app:layout_constraintTop_toBottomOf="@id/password_edt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="54dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>